--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "expo": "^51.0.25",
+    "expo": "^51.0.26",
     "expo-font": "^12.0.9",
     "expo-image": "^1.12.13",
     "expo-status-bar": "^1.12.1",
+    "expo-updates": "^0.25.22",
     "express": "^4.19.2",
     "firebase": "^10.12.5",
     "react": "18.2.0",
